# Udacity_Embedded_CProjects

Payment_app/: CMakeLists.txt
Payment_app/Card/: card.c
Payment_app/ConsoleApplication1/: ConsoleApplication1.sln
Payment_app/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.vcxproj
Payment_app/Payment_app/: Payment_app.sln
Payment_app/Payment_app/Payment_app/: CMakeLists.txt
Payment_app/Payment_app/Payment_app/Card/: card.c  card.h
Payment_app/Payment_app/Payment_app/Server/: server.c  server.h
Payment_app/Payment_app_snapshots/Payment_app_before removing current date code/Payment_app/: CMakeLists.txt  Payment_app.vcxproj  Payment_app.vcxproj.filters
Payment_app/Payment_app_snapshots/Payment_app_before removing current date code/Payment_app/Terminal/: terminal.c  terminal.h
Payment_app/Payment_app_snapshots/Payment_app_before removing current date code/Payment_app/x64/Debug/: Payment_app.exe.recipe
Payment_app/Payment_app_snapshots/Payment_app_before removing current date code/Payment_app/x64/Debug/Payment_app.tlog/: CL.read.1.tlog  CL.write.1.tlog  Payment_app.lastbuildstate  link.command.1.tlog
Payment_app/Terminal/: terminal.c
Task/Payment_app/: Payment_app.cpp  main.c
Task/Payment_app/Card/: card.c
Task/Payment_app/Server/: server.c  server.h
Task/Payment_app/Terminal/: terminal.c
learn/src/: card  card.h  functions.c  functions.h  main  main.c
payment_application/Card/: card  card.c  card.h
payment_application/Terminal/: terminal.h
payment_application/src/: main  main.c
(+17 files in other folders)
